--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'realm-android'
 }
 
 android {
@@ -16,10 +17,17 @@ android {
     }
 
     buildTypes {
+        buildFeatures
+                {
+                    viewBinding true
+                }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    realm {
+        syncEnabled = true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
